[package]
name = "easy_prefs"
version = "0.1.1"
edition = "2021"
authors = ["Tyler Patterson <tyler@everaccountable.com>"]
description = "We asked: \"How simple can we make reading and writing preferences in Rust?\" This is our answer. (Oh, and it has to also be performant, testable, thread safe, easy to migrate, and never corrupt your data)"
license = "MIT OR Apache-2.0"
homepage = "https://everaccountable.com"
repository = "https://github.com/everaccountable/easy_prefs"
documentation = "https://docs.rs/easy_prefs"

[dependencies]
paste = "1.0.15"
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
directories = "6.0.0"
tempfile = "3.17.1"  # Used to tell us where we can store the user's data on different platforms

