[package]
name = "easy_prefs"
version = "0.1.5"
edition = "2021"
authors = ["Tyler Patterson <tyler@everaccountable.com>"]
description = "The simplest to use API I could think of to persist a prefs to disk. Basically decorate a struct with a macro, then data is saved when you make write to it. It is also performant, testable, thread safe, easy to migrate, and careful to not corrupt your data"
license = "MIT OR Apache-2.0"
homepage = "https://everaccountable.com"
repository = "https://github.com/everaccountable/easy_prefs"
documentation = "https://docs.rs/easy_prefs"

[dependencies]
paste = "1.0.15"
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
directories = "6.0.0"
tempfile = "3.17.1"  # Used to tell us where we can store the user's data on different platforms

